<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Jogador">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="200dp"
            android:text="@string/primeiroJogador"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edPrimeiroJogador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:text="" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/segundoJogador" />

        <EditText
            android:id="@+id/edSegundoJogador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:padding="5dp"
            android:layout_marginBottom="18dp"
            android:text="" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/escolhaOpcao" />

        <RadioGroup
            android:id="@+id/selecaoSimbolo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/opcaoX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="85dp"
                android:text="@string/opacaoX" />

            <RadioButton
                android:id="@+id/opcaoO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/opacaoO" />
        </RadioGroup>

        <Button
            android:id="@+id/btIniciar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#3F51B5"
            android:text="@string/inicar" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>